# fork-plugin

./: CMakeLists.txt  HACKING  README.md
.ci/: run
.github/workflows/: release.yml
debian/: changelog  rules
doc/: api.md  porting-to-weston.md
include/: empty_last.h
libinput/: fork-plugin.cpp  libinput_environment.h
src/: circular.h  fork_configuration.h  machine.h  triqueue.h
test/: test-circular.cpp  test-machine.cpp  test-triqueue.cpp
xorg/: CMakeLists.txt  fork-plugin.cpp  xorg.h
